[package]
name = "advent_of_code_2024"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
lazy_static = "1.5.0"
counter = "0.6.0"
itertools = "0.13.0"
pathfinding = "4.11.0"
cached = "0.54.0"
gcd = "2.3.0"
mod_exp = "1.0.1"
crossterm = "0.28.1"
